--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
+    "gulp-csscomb": "^3.0.6",
     "gulp-cssnano": "^2.1.0",
     "gulp-flatten": "0.1.1",
     "gulp-if": "^1.2.5",
@@ -52,6 +53,7 @@
     "merge-stream": "^1.0.0",
     "minimist": "^1.1.3",
     "run-sequence": "^1.1.2",
+    "susy": "^2.2.12",
     "traverse": "^0.6.6",
     "wiredep": "^2.2.2"
   }
